// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LsaFormService init should init the form with defaults 1`] = `
Object {
  "lubricationInterval": "year",
  "lubricationPoints": "2-4",
  "lubricationQty": 60,
  "optime": 0,
  "pipeLength": Object {
    "max": 3,
    "min": 1,
    "title": "1 - 3m",
  },
}
`;

exports[`LsaFormService init should init the form with defaults 2`] = `
Object {
  "grease": null,
  "lubricantType": "Arcanol",
}
`;

exports[`LsaFormService init should init the form with defaults 3`] = `
Object {
  "battery": null,
  "temperature": null,
}
`;

exports[`LsaFormService init should init the form with defaults 4`] = `
Object {
  "application": Object {
    "battery": null,
    "temperature": null,
  },
  "lubricant": Object {
    "grease": null,
    "lubricantType": "Arcanol",
  },
  "lubricationPoints": Object {
    "lubricationInterval": "year",
    "lubricationPoints": "2-4",
    "lubricationQty": 60,
    "optime": 0,
    "pipeLength": Object {
      "max": 3,
      "min": 1,
      "title": "1 - 3m",
    },
  },
}
`;
